<resources>
    <string name="app_name">Meu Eletricista</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="no_account">Não tem conta? Cadastre-se</string>
    <string name="register_title">Crie sua conta</string>
    <string name="register_button">Cadastrar</string>
    <string name="hint_name">Nome</string>
    <string name="hint_address">Endereço</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_password">Senha</string>
    <string name="txtVersaoApp">Versão 1.2</string>
    <string name="txtCalculosEletricos">Cálculos Elétricos</string>
    <string name="txtDadosIniciaisCorrente">Cálculo Corrente</string>
    <string name="txtCalculoConsumo">Cálculo Consumo</string>
    <string name="txtDadosIniciaisPotencia">Cálculo Potência</string>
    <string name="txtDimensionaCondutor">Condutor</string>
    <string name="txtCondutoreDisjuntor">Condutor + Disjuntor</string>
    <string name="txtMenuQuedaDeTensao">Queda de Tensão</string>
    <string name="txtDadosIniciaisDisjuntor">Disjuntor</string>
    <string name="txtPotencia">Potência (Watts)</string>
    <string name="txtMenuCorrente">Corrente Elétrica</string>
    <string name="txtMenuPotencia">Potência</string>
    <string name="txtMenuQuedaTensao">Queda de Tensão</string>
    <string name="txtMenuCondutor">Condutor</string>
    <string name="txtMenuCondutorDisjuntor">Condutor + Disjuntor</string>
    <string name="txtMenuGerador">Gerador</string>
    <string name="guide_title">Guia rápido do aplicativo</string>
    <string name="guide_nbr">Baseado na NBR 5410: padrões brasileiros de instalações elétricas de baixa tensão.</string>
    <string name="guide_requirement">Em caso de dúvidas, utilize o menu, Educação ou entre em contato.</string>
    <string name="guide_features">Cálculos básicos para eletricistas. Dimensionamentos: Condutor, Disjuntor e Gerador.</string>
    <string name="guide_contact_prompt">Dúvidas ou novas funcionalidades?</string>
    <string name="guide_contact_button">Entrar em contato</string>
    <string name="home_calc_title">Cálculos e Dimensionamentos</string>
    <string name="home_calc_desc">Corrente, Potência, Queda de Tensão, Condutor, Disjuntor e Gerador</string>
    <string name="home_edu_title">Educação</string>
    <string name="home_edu_desc">Aprenda eletricidade: Tensão, Corrente, Resistência, Potência e boas práticas</string>
    <string name="home_sec_title">Segurança &amp; Requisitos</string>
    <string name="home_sec_desc">NR10, certificações, EPI, ferramentas e conformidade legal</string>
    <string name="home_action_access">Acessar</string>
    <string name="home_safety_note">Segurança em primeiro lugar: desligue a rede, use EPI e confirme ausência de tensão.</string>
    <string name="calc_hub_title">Cálculos e Dimensionamentos</string>
    <string name="calc_hub_header">Escolha o cálculo que deseja usar</string>
    <string name="calc_hub_subtitle">Selecione um módulo para continuar</string>
    <string name="about_title">Sobre o App</string>
    <string name="about_app_title">Meu Eletricista</string>
    <string name="about_app_desc">Um aplicativo desenvolvido pela Kaizen Aplicações para auxiliar eletricistas e profissionais da área elétrica com cálculos rápidos e precisos conforme as normas técnicas brasileiras.</string>
    <string name="guide_share_title">Compartilhe o app</string>
    <string name="guide_share_desc">Indique para colegas e ajude mais profissionais a trabalharem com segurança.</string>
    <string name="guide_share_button">Compartilhar</string>
    <string name="guide_donate_title">Apoie o projeto</string>
    <string name="guide_donate_desc">Sua contribuição ajuda a manter o app atualizado.</string>
    <string name="guide_donate_button">Copiar chave PIX</string>
    <string name="pix_key">12996674265</string>
    <string name="pix_copied">Chave PIX copiada.</string>
    <string name="edtHintResultado">Resultado</string>
    <string name="editHintValorKva">Digite Kvah em centavos</string>
    <string name="editHintTempo">Digite o tempo em horas</string>
    <string name="editHintPotencia">Digite a Potência</string>
    <string name="editHintTensao">Digite Tensão </string>
    <string name="editHintCorrente">Digite a Corrente</string>
    <string name="editHintSecaoCondutor">Digite a Seção do Condutor</string>
    <string name="editHintDistancia">Digite a Distância</string>
    <string name="editHintResultado">Perda de Tensão</string>
    <string name="editHintTensaoAtual">Tensão Atual</string>
    <string name="editHintTemperatura">Digite a Temperatura</string>
    <string name="edthintquedaDeTensaoInformacaoImportante">Informação importante</string>
    <string name="txtTempo">Tempo (H)</string>
    <string name="txtValorDoKvaH">Valor do Kva/h</string>
    <string name="txtWebErro">Conecte seu aparelho a internet para visualizar as páginas de ajuda   </string>
    <string name="txtPolitica"> Wesley Schuab da Kaizen Aplicações construiu o aplicativo Meu Eletricista como um aplicativo
       gratuito. Este SERVIÇO é fornecido sem nenhum custo e deve ser usado como está.

Esta página é usada para informar os visitantes sobre minhas políticas de coleta, uso e divulgação de Informações Pessoais, caso alguém decida usar meu Serviço.

Se você optar por usar meu serviço, você concorda com a coleta e uso de informações em relação a esta política. As Informações Pessoais que recolhe são utilizadas para fornecer e melhorar o Serviço. Não vou usar ou compartilhar suas informações com ninguém, exceto conforme descrito nesta Política de Privacidade.

Os termos usados ​​nesta Política de Privacidade têm os mesmos significados dos nossos Termos e Condições, que podem ser acessados ​​no Meu Eletricista, a menos que definido de outra forma nesta Política de Privacidade.

Coleta e uso de informações

Para uma melhor experiência, ao usar nosso Serviço, posso solicitar que você nos forneça certas informações de identificação pessoal. As informações que solicito serão retidas em seu dispositivo e não serão coletadas por mim de forma alguma.

O aplicativo usa serviços de terceiros que podem coletar informações usadas para identificá-lo.

Serviços do Google Play
Dados de registro

Em caso de erro no aplicativo, eu coleto dados e informações (por meio de produtos de terceiros) em seu telefone chamado Log Data. Estes dados de registro podem incluir informações como endereço de protocolo de Internet ("IP") do dispositivo, nome do dispositivo, versão do sistema operacional, configuração do aplicativo ao utilizar meu serviço, hora e data de uso do serviço e outras estatísticas .
Cookies
Cookies são arquivos com uma pequena quantidade de dados que são comumente usados ​​como identificadores exclusivos anônimos. Eles são enviados para o seu navegador a partir dos sites que você visita e são armazenados na memória interna do seu dispositivo.
Este Serviço não usa esses “cookies” explicitamente. No entanto, o aplicativo pode usar código de terceiros e bibliotecas que usam “cookies” para coletar informações e melhorar seus serviços. Você tem a opção de aceitar ou recusar esses cookies e saber quando um cookie está sendo enviado para o seu dispositivo. Se você optar por recusar nossos cookies, pode não ser capaz de usar algumas partes deste Serviço.

Provedores de serviço

Posso empregar empresas terceirizadas e indivíduos pelos seguintes motivos:

Para facilitar nosso serviço;
Para fornecer o Serviço em nosso nome;
Para executar serviços relacionados com o serviço; ou
Para nos ajudar a analisar como nosso serviço é usado.
Desejo informar aos usuários deste Serviço que esses terceiros têm acesso às suas Informações Pessoais. O motivo é realizar as tarefas atribuídas a eles em nosso nome. No entanto, eles são obrigados a não divulgar ou usar as informações para qualquer outra finalidade.

Segurança

Valorizo ​​sua confiança em nos fornecer suas informações pessoais, portanto, estamos nos empenhando para usar meios comercialmente aceitáveis ​​de protegê-las. Mas lembre-se que nenhum método de transmissão pela internet, ou método de armazenamento eletrônico é 100% seguro e confiável, e não posso garantir sua segurança absoluta.

Links para outros sites

Este serviço pode conter links para outros sites. Se você clicar em um link de terceiros, será direcionado a esse site. Observe que esses sites externos não são operados por mim. Portanto, eu recomendo fortemente que você reveja a Política de Privacidade desses sites. Não tenho controle e não assumo nenhuma responsabilidade pelo conteúdo, políticas de privacidade ou práticas de quaisquer sites ou serviços de terceiros.

Privacidade das crianças

Esses serviços não se dirigem a ninguém com menos de 13 anos. Não recolhe intencionalmente informações de identificação pessoal de crianças com menos de 13 anos. No caso de eu descobrir que uma criança menor de 13 anos me forneceu informações pessoais, eu as apago imediatamente de nossos servidores. Se você é um pai ou responsável e sabe que seu filho nos forneceu informações pessoais, entre em contato comigo para que eu possa tomar as medidas necessárias.

Mudanças nesta Política de Privacidade

Posso atualizar nossa Política de Privacidade de tempos em tempos. Portanto, é recomendável revisar esta página periodicamente para verificar quaisquer alterações. Irei notificá-lo de quaisquer alterações, postando a nova Política de Privacidade nesta página.

Esta política está em vigor a partir de 2021-06-09

Contate-Nos

Se você tiver dúvidas ou sugestões sobre a minha Política de Privacidade, não hesite em entrar em contato comigo em yinnihisoka@gmail.com.

Esta página de política de privacidade foi criada em privacypolicytemplate.net e modificada / gerada pelo App Privacy Generator.</string>
    <string name="chtxtTermo">Concordo com os Termos de Uso e Políticas de Privacidade</string>
    <string name="iconeAjuda">ajuda</string>
    <string name="sw127">127</string>
    <string name="sw220">220</string>
    <string name="sw380">380</string>
    <string name="swA1">A1</string>
    <string name="swA2">A2</string>
    <string name="swB1">B1</string>
    <string name="swB2">B2</string>
    <string name="btnCalcular">CALCULAR</string>
    <string name="txtDadosIniciaisQuedaDeTensao">Queda de Tensão</string>
    <string name="txtDistancia"> Distância </string>
    <string name="txtTipopoDeLinha"> Tipo de Instalação</string>
    <string name="welcome_title">Bem-vindo ao Meu Eletricista</string>
    <string name="welcome_subtitle">Um app para ajudar você com cálculos elétricos e dimensionamentos no dia a dia.</string>
    <string name="welcome_feature_1">• Faça cálculos de corrente, potência e queda de tensão.</string>
    <string name="welcome_feature_2">• Dimensione condutores, disjuntores e geradores com mais confiança.</string>
    <string name="welcome_feature_3">• Acesse conteúdos educativos e dicas de segurança.</string>
    <string name="welcome_start_button">Começar</string>
    <string name="txtmenuPotencia"> Potência</string>
    <string name="txtMenuDisjuntor"> Disjuntor</string>
    <string name="txtMenuConsumo"> Consumo</string>
    <string name="txt_sobreOapp">Sobre o App</string>
    <string name="txtCompartilharOapp">Compartilhar o App</string>
    <string name="generator_title_decorated">⚡ Dimensionamento de Gerador</string>
    <string name="generator_total_load">CARGA TOTAL</string>
    <string name="generator_power_kw_hint">Potência (kW)</string>
    <string name="generator_voltage">TENSÃO</string>
    <string name="generator_load_type">TIPO DE CARGA</string>
    <string name="generator_system">SISTEMA</string>
    <string name="generator_single_phase">Monofásico</string>
    <string name="generator_three_phase">Trifásico</string>
    <string name="generator_calculate">DIMENSIONAR GERADOR</string>
</resources>